@@ -1,6 +1,6 @@
 Package: polycor
 Version: 0.8-0
-Date: 2020-04-20
+Date: 2020-04-22
 Title: Polychoric and Polyserial Correlations
 Authors@R: person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca")
 Depends: R (>= 3.3.0)
